# SFM_Sync-File-Mover

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: build.yml  gradle.yml
src/: code.rs  file_handler.rs  filter.rs  main.rs
src/file_handler/: filter.rs
