[package]
name = "sfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = { version = "2.5.0", default-features = false }
regex = "1.9.1"

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
lto = true
incremental = false